# gold

./: .clang-format  .gitmodules  3rdPartyLicenses  CMakeLists.txt  OUTPUT  README.md
cmake/: game.cmake  shaders.cmake  shared.cmake  web.cmake
examples/conwaysGameOfLife/: CMakeLists.txt  README.md
examples/conwaysGameOfLife/assets/: circle.dds
examples/conwaysGameOfLife/src/: main.cpp
examples/myWebProject/: 3rdPartyLicenses  CMakeLists.txt  LICENSE  README.md
examples/myWebProject/include/: session.hpp  upload.hpp  user.hpp
examples/myWebProject/js/: croppieCallback.js
examples/myWebProject/src/: main.cpp  navbar.cpp  session.cpp  template.cpp  upload.cpp  user.cpp
examples/myWebProject/src/routes/: index.cpp
examples/myWebProject/src/routes/upload/: delete.cpp  find.cpp  index.cpp  options.cpp
examples/myWebProject/src/routes/user/: delete.cpp  login.cpp  options.cpp  register.cpp
examples/scriptingExample/: CMakeLists.txt  css  js
examples/scriptingExample/src/: main.cpp
include/: array.hpp  camera.hpp  component.hpp  database.hpp  engine.h  engine.hpp  entity.hpp  file.hpp  graphics.hpp  html.hpp  image.hpp  memory.hpp  mesh.hpp  module.hpp  module.inl  object.h  object.hpp  physicsBody.hpp  promise.hpp  renderable.hpp  server.hpp  shape.hpp  sprite.hpp  texture.hpp  transform.hpp  types.hpp  types.hpp.orig  var.hpp  window.hpp  worker.hpp  world.hpp
include/game/: boxShape.hpp  camera.hpp  component.hpp  engine.hpp  entity.hpp  envMap.hpp  graphics.hpp  light.hpp  mesh.hpp  meshRenderer.hpp  meshShape.hpp  physicsBody.hpp  renderable.hpp  shape.hpp  sphereShape.hpp  sprite.hpp  texture.hpp  transform.hpp  window.hpp  world.hpp
include/web/: database.hpp  html.hpp  server.hpp
src/: array.cpp  component.cpp  database.cpp  engine.c  engine.cpp  entity.cpp  file.cpp  graphics.cpp  html.cpp  image.cpp  list.cpp  list.cpp.orig  main.c  main.cpp  memory.cpp  mesh.cpp  module.cpp  object.c  object.cpp  object.cpp.orig  promise.cpp  renderable.cpp  server.cpp  sprite.cpp  texture.cpp  transform.cpp  types.cpp  var.cpp  window.cpp  worker.cpp
src/game/: boxShape.cpp  camera.cpp  component.cpp  engine.cpp  entity.cpp  envMap.cpp  graphics.cpp  light.cpp  mesh.cpp  meshRenderer.cpp  meshShape.cpp  physicsBody.cpp  polyShape.cpp  renderable.cpp  shape.cpp  sphereShape.cpp  sprite.cpp  texture.cpp  transform.cpp  window.cpp  world.cpp
src/shaders/common/: bgfx_compute.sh  bgfx_shader.sh
src/shaders/pbr/: animation.sh  defines.sh  fs_pbr.sc  functions.sh  ibl.sh  textures.sh  tonemapping.sh  uniforms.sh  varying.def.sc  vs_pbr.sc
src/shaders/sprite/: fs_sprite.sc  varying.def.sc  vs_sprite.sc
src/shaders/wireframe/: fs_wireframe.sc  varying.def.sc  vs_wireframe.sc
src/web/: database.cpp  html.cpp  server.cpp
