
cmake_minimum_required(VERSION 3.10)

project(gold)


set(JSON_BuildTests OFF CACHE INTERNAL "")
set(JSON_Install OFF CACHE INTERNAL "")
set(BUILD_TESTING OFF CACHE INTERNAL "")
set(BGFX_BUILD_EXAMPLES OFF CACHE INTERNAL "")
set(BGFX_CONFIG_DEBUG ON CACHE INTERNAL "")
set(ENTRY_CONFIG_USE_SDL ON CACHE INTERNAL "")
set(BGFX_OPENGL_VERSION "46" CACHE INTERNAL "")
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(USE_MSVC_RUNTIME_LIBRARY_DLL ON CACHE INTERNAL "")
set(BUILD_BULLET2_DEMOS OFF CACHE INTERNAL "")
set(BUILD_UNIT_TESTS OFF CACHE INTERNAL "")
set(OpenGL_GL_PREFERENCE "GLVND" CACHE INTERNAL "")
set(MONGOC_ENABLE_STATIC_BUILD ON CACHE INTERNAL "")
set(ENABLE_TESTS OFF CACHE INTERNAL "")
set(ENABLE_EXAMPLES OFF CACHE INTERNAL "")
set(BUILD_CPU_DEMOS OFF CACHE INTERNAL "")
set(BUILD_OPENGL3_DEMOS OFF CACHE INTERNAL "")
set(ENABLE_UNINSTALL OFF CACHE INTERNAL "")
set(INSTALL_LIBS OFF CACHE INTERNAL "")
set(INSTALL_EXTRA_LIBS OFF CACHE INTERNAL "")
set(INSTALL_CMAKE_FILES OFF CACHE INTERNAL "")
set(LIBUV_BUILD_TESTS OFF CACHE INTERNAL "")
set(LIBUV_BUILD_BENCH OFF CACHE INTERNAL "")

add_subdirectory(3rdParty)


unset(_MSC_VER CACHE)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 20)

include(cmake/shaders.cmake)
include(cmake/shared.cmake)
include(cmake/game.cmake)
include(cmake/web.cmake)